--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>demo</name>
-    <description>Demo Spring Boot project</description>
+    <name>Increda</name>
+    <description>Scrum Management App</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
